--- a/app/globals.css
+++ b/app/globals.css
@@ -6,7 +6,7 @@
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
-  --font-sans: var(--font-lexend-zetta);
+  --font-sans: var(--font-lexend-mega);
   --font-mono: var(--font-lexend-deca);
   --color-sidebar-ring: var(--sidebar-ring);
   --color-sidebar-border: var(--sidebar-border);
